--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -1,15 +1,9 @@
 apiVersion: v1
 data:
-  mapRoles: |
-    - groups:
-      - system:masters
-      rolearn: arn:aws:iam::474522637082:role/UdacityFlaskDeployCBKubectlRole
-      username: build      
-    - groups:
-      - system:bootstrappers
-      - system:nodes
-      rolearn: arn:aws:iam::474522637082:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-3DPNQ2EON4LR
-      username: system:node:{{EC2PrivateDNSName}}
+  mapRoles: "- groups:\n  - system:masters\n  rolearn: arn:aws:iam::474522637082:role/UdacityFlaskDeployCBKubectlRole\n
+    \ username: build      \n- groups:\n  - system:bootstrappers\n  - system:nodes\n
+    \ rolearn: arn:aws:iam::474522637082:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-3DPNQ2EON4LR\n
+    \ username: system:node:{{EC2PrivateDNSName}}\n"
   mapUsers: |
     []
 kind: ConfigMap
@@ -17,7 +11,6 @@ metadata:
   creationTimestamp: "2021-04-15T18:21:58Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "1464"
+  resourceVersion: "8874"
   selfLink: /api/v1/namespaces/kube-system/configmaps/aws-auth
   uid: 6b6c117f-d2b9-4e10-968f-913929a21948
-
